--- a/a-propos.html
+++ b/a-propos.html
@@ -61,7 +61,7 @@
         <h1 class="text-white highlight">
             À propos de Picasso
         </h1>
-        
+
         <div class="row">
             <div class="col-md-4">
                 <img src="images/Pablo_picasso_1.jpg" class="img-fluid rounded" alt="Pablo Picasso">
@@ -94,7 +94,10 @@
 <footer class="footer text-white py-3">
     <div class="container">
         <div class="text-center mt-3">
-            <p class="small highlight">&copy; 2024 Musée de Picasso. Tous droits réservés.</p>
+            <p class="small highlight">&copy; 2024 Musée de Picasso. Tous droits réservés.
+            </p>
+            <br>
+            <a href="mention-legales.html" title="Consultez les mentions légales" style="text-decoration: none;">Mentions légales</a>
         </div>
     </div>
 </footer>
