--- a/informations.html
+++ b/informations.html
@@ -76,7 +76,7 @@
 
         <h2 class="text-white">Horaires d'ouverture</h2>
         <ul>
-            <li>Du mardi au vendredi : 10h00 - 12h00 et 14h00 - 18h3 0</li>
+            <li>Du mardi au vendredi : 10h00 - 12h00 et 14h00 - 18h30</li>
             <li>Samedi et dimanche : 10h00 - 19h00</li>
             <li>Fermé le lundi</li>
         </ul>
@@ -90,7 +90,10 @@
 <footer class="footer text-white py-3">
     <div class="container">
         <div class="text-center mt-3">
-            <p class="small highlight">&copy; 2024 Musée de Picasso. Tous droits réservés.</p>
+            <p class="small highlight">&copy; 2024 Musée de Picasso. Tous droits réservés.
+            </p>
+            <br>
+            <a href="mention-legales.html" title="Consultez les mentions légales" style="text-decoration: none;">Mentions légales</a>
         </div>
     </div>
 </footer>
